# vidrush

./: .gitignore  ARCHITECTURE.md  CLOUDFLARE_TUNNEL_ISSUE.md  COMFYUI_INTEGRATION_CHANGES.md  CONTROLES_VIDEO_FR.md  DEBUGGING_GUIDE.md  DURATION_FIX_FR.md  FLUX2_CHANGELOG.md  FLUX2_DEPLOYMENT_GUIDE.md  FLUX2_DOCUMENTATION_INDEX.md  FLUX2_FINAL_SUMMARY.md  FLUX2_GUIDE_RAPIDE_FR.md  FLUX2_IMAGE_GENERATION.md  FLUX2_IMPLEMENTATION_SUMMARY.md  FLUX2_INDEX.md  FLUX2_INTEGRATION_COMPLETE.md  FLUX2_README.md  FLUX2_VISUAL_GUIDE.md  FLUX2_YOUTUBE_INTEGRATION_EXAMPLE.md  GENRE_STYLING_SYSTEM.md  IMAGE_TO_VIDEO_COMPLETE.md  IMAGE_UPLOAD_FEATURE.md  IMPLEMENTATION_COMPLETE_FR.md  LOCALISATION_CONTROLES.md  LTX_MIGRATION_COMPLETE.md  MOBILE_RESPONSIVE_UPDATE.md  MUSIC_GENERATION_CHECKLIST.md  MUSIC_GENERATION_FEATURE.md  MUSIC_GENERATION_QUICK_START.md  MUSIC_GENERATION_SETUP.md  MUSIC_GENERATION_SUMMARY.md  PROJECT_AUDIT.md  QUICK_START_VIDEO_CONTROLS.md  REPONSE_RAPIDE_FR.md  SCRIPT_ENGINE_FEATURE.md  SCRIPT_ENGINE_FLOW.md  SCRIPT_ENGINE_SETUP.md  TESTING_LTX_SERVICE.md  URL_UPDATE_SUMMARY.md  USER_VIDEO_CONTROLS.md  (+18 more)
.claude/: settings.local.json
apps/backend/: .env.example  check-comfyui-models.ts  check-comfyui-nodes.ts  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  TESTING.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: assembler.rs  comfyui.rs  comfyui_test.rs  commands.rs  ffmpeg.rs  lib.rs  local_server.rs  main.rs
guide/: Editor.css  Editor.tsx  INTEGRATION-GUIDE.md  tauri-commands.rs  video-editor-architecture.md
(+238 files in other folders)
